--- a/vignettes/process-landscape.Rmd
+++ b/vignettes/process-landscape.Rmd
@@ -195,7 +195,7 @@ lsm <- landscapemetrics::list_lsm() %>%
   mutate(landscape = ifelse(is.na(landscape), "No", paste0("[", landscape, "](https://r-spatialecology.github.io/landscapemetrics/reference/lsm_l_", metric, ".html)"))) 
 
 
-knitr::kable(lsm, format = "html", caption = "**Table: Examples of landscape metrics and their corresponding level(s) they may be calculated at (_class_/_landscape_)**. Details in hyperlinked text.") %>%
+knitr::kable(lsm, format = "html", caption = "**Table: Examples of landscape metrics and their corresponding level(s) they may be calculated at (e.g., class, landscape)**. Details in hyperlinked text.") %>%
   kableExtra::kable_styling(full_width = T, position = "left")  %>%
     kableExtra::kable_styling("striped") %>% kableExtra::scroll_box(width = "100%", height = "600px")
 
@@ -204,13 +204,13 @@ rm(lsm)
 
 <br>
 
-A wide variety of landscape metrics can be summarised at point locations of interest, using the function `calc_lsm()`. The following example summarises all 'class-level' metrics for vegetation cover (`veg_classified`), up to `100` and `200` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius. Column names include a prefix indicating that values are landscape metrics derived from a classified raster (`lsm_`).
+A wide variety of landscape metrics can be summarised at point locations of interest, using the function `calc_lsm()`. The following example summarises all 'class-level' metrics for vegetation cover (`veg_classified`), up to `200` and `400` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius. Column names include a prefix indicating that values are landscape metrics derived from a classified raster (`lsm_`).
 
 ```{r calc_lsm, warning = FALSE, message = FALSE}
 lsm_perpoint <- 
   calc_lsm(raster = veg_classified,
            points = points,
-           buffer_sizes = c(100, 200), # in metres
+           buffer_sizes = c(200, 400), # in metres
            level = c("class"),
            class_names = c("veg"), # land cover class name
            class_values = c(1)) # pixel value of class
@@ -236,7 +236,7 @@ Landscape elements can be retrieved from the open-source maps such as OpenStreet
 
 ```{r download urban elements, eval = FALSE}
 
-dir.create(paste0(output_dir, "/osm")) # create sub-directory for raw data
+dir.create(paste0(output_dir, "/osm")) # create sub-directory for raw data (avoid re-downloading each time)
 
 buildings <- get_buildings_osm(place = sampling_areas,
                                date = as.Date("2021-01-01"),
@@ -288,7 +288,7 @@ The function `calc_osm()` can be be used to summarise the following metrics of b
 
 <br>
 
-For example, we can calculate building metrics up to `100` and `200` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius. Column names include a prefix indicating that values are from OpenStreetMap (`osm_`).
+For example, we can calculate building metrics up to `200` and `400` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius. Column names include a prefix indicating that values are from OpenStreetMap (`osm_`).
 
 ```{r calc_osm, warning = FALSE, message = FALSE}
 
@@ -296,7 +296,7 @@ osm_perpoint <-
   calc_osm(vector = buildings, 
            points = points,
            name = "buildings",
-           buffer_sizes = c(100, 200),
+           buffer_sizes = c(200, 400),
            building_levels = "levels") 
 
 osm_perpoint
@@ -317,7 +317,69 @@ do.call(rbind, # alternative way to convert list to dataframe
 
 ## 3. Manually generated landscape elements
 
-There may be cases where you intend to summarise data that have been generated manually, for instance, from on-site mapping or artificial design scenarios (see `vignette("use-cases")`). In our work, all of such datasets were in vector format (points, polygons, lines); the function `calc_manual()` is provided for interested users, to calculate the following landscape predictors, at multiple buffer radii. Column names include a prefix indicating that values were manually generated (`man_`).
+There may be cases where you intend to summarise data that have been generated manually, for instance, from on-site mapping or artificial design scenarios (see `vignette("use-cases")`). Load example data for landscape vectors (points, polygons, lines) within the Punggol (PG) area in Singapore (Chong et al., 2014, 2019), visualised in the interactive map below. Note that there are no water bodies mapped within the target area.
+
+```{r import manually mapped vector data, message=FALSE}
+filepath <- system.file("extdata", "landscape-vectors_mapped.Rdata", package = "biodivercity") # load example data
+load(filepath) 
+```
+
+```{r plot interative map for landscape data, echo = FALSE, warning = FALSE, message = FALSE, fig.width=2.6, fig.height = 2.0, dpi = 300, out.width="100%"}
+
+tmap_mode("view")
+tmap_options(check.and.fix = TRUE)
+
+tm_basemap(c("CartoDB.Positron")) +
+  tm_shape(bound) +
+    tm_borders() +
+  tm_shape(natveg) +
+    tm_polygons(title = "Natural vegetation",
+                group = "natveg",
+                col = "darkgreen",
+                alpha = 0.6,
+                border.col = "transparent") +
+  tm_shape(trees %>% relocate(species)) +
+    tm_dots(title = "Trees",
+            group = "trees",
+            col = "brown",
+            size = 0.001,
+            border.col = "transparent") +
+  tm_shape(shrubs %>% relocate(species) %>% st_make_valid()) +
+    tm_polygons(title = "Shrubs",
+                group = "shrubs",
+                col = "#ffd92f",
+                alpha = 0.6,
+                border.col = "transparent") +
+  tm_shape(turf) +
+    tm_polygons(title = "Turf",
+                group = "turf",
+                col = "#a6d854",
+                alpha = 0.6,
+                border.col = "transparent") +
+  # tm_shape(water) +
+  #   tm_polygons(title = "Water",
+  #               group = "water",
+  #               col = "blue",
+  #               alpha = 0.6,
+  #               border.col = "transparent") +
+  tm_shape(buildings) +
+    tm_polygons(title = "Building levels",
+                group = "buildings",
+                col = "levels",
+                palette = viridis::magma(5),
+                style = "jenks",
+                border.col = "transparent") + 
+  tm_shape(roads) +
+    tm_lines(title.col = "Road lanes",
+             group = "roads",
+             col = "lanes",
+             palette = viridis::magma(5),
+             style = "fixed",
+             breaks = c(2, 4, 6, 8))
+
+```
+
+The function `calc_manual()` is provided for interested users, to calculate the following landscape predictors at multiple buffer radii. Column names include a prefix indicating that values were manually generated (`man_`).
     
 - Buildings (polygons):
     - Building footprint area (`buildingArea_m2`)
@@ -351,9 +413,6 @@ There may be cases where you intend to summarise data that have been generated m
 For example, we can summarise the species and count of trees up to `50` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius.
 
 ```{r calculate metrics for manually generated data, message = FALSE}
-filepath <- system.file("extdata", "pg_layers.Rdata", package = "biodivercity")
-load(filepath) # example landscape vector data
-
 manual_perpoint <-
   calc_manual(vector = trees, name = "trees",
               points = points, buffer_sizes = 50,
@@ -369,3 +428,11 @@ manual_perpoint %>%
   bind_rows(.id = "radius")
 ```
 
+
+---
+
+## References
+
+Chong KY, Teo S, Kurukulasuriya B, Chung YF, Giam X & Tan HTW (2019) The effects of landscape scale on greenery and traffic relationships with urban birds and butterflies. _Urban Ecosystems_, _22_(5): 917–926.
+
+Chong KY, Teo S, Kurukulasuriya B, Chung YF, Rajathurai S & Tan HTW (2014) Not all green is as good: Different effects of the natural and cultivated components of urban vegetation on bird and butterfly diversity. _Biological Conservation_, _171_: 299–309.
