address spell check using R CMD CHECK and regenerate pkgdown

--- a/vignettes/more/animals-simulate-missing-surveys.Rmd
+++ b/vignettes/more/animals-simulate-missing-surveys.Rmd
@@ -64,7 +64,7 @@ knitr::kable(head(scenarios), caption = "**First few rows of the object `scenari
 
 <br>
 
-## Visualise reuslts
+## Visualise results
 
 These 100 bootstrapped scenarios may be used in further analyses, or visualised to observe the variation in species richness within the sampled area of interest (Punggol): 
 
