--- a/vignettes/build-models.Rmd
+++ b/vignettes/build-models.Rmd
@@ -206,7 +206,7 @@ rm(birds, birds_scaled, predictors, subset_exp,
 
 ## 2. Community (_Beta_) diversity
 
-Partial RDA models were used to model the relationship between animal communities and landscape predictors while considering also the inherent spatial structure of the animal communities. Similarly, variable selection by random forest was performed on the landscape variables prior to beta model building. In the following sections, the example variables were selected using the `randomForestSRC` and `MultivariateRandomForest` packages. After the first round of variable selection, the landscape predictors were summerised as Principal Component Analysis (PCA) axes while the spatial variation were quantified using Principle Coordinates of Neighbourhood Matrices (PCNM).
+Partial RDA models were used to model the relationship between animal communities and landscape predictors while considering also the inherent spatial structure of the animal communities. Similarly, variable selection by random forest was performed on the landscape variables prior to beta model building. In the following sections, the example variables were selected using the `randomForestSRC` and `MultivariateRandomForest` packages. After the first round of variable selection, the landscape predictors were summarised as Principal Component Analysis (PCA) axes while the spatial variation were quantified using Principle Coordinates of Neighbourhood Matrices (PCNM).
 
 First, load the additional package `vegan` for beta diversity model building:
 
@@ -330,7 +330,7 @@ birds.rda.fin <- rda(bird_com ~ PC1 + PC2 + PC4 + PC6 + PC7 + PC8 + Condition(PC
 
 ```
 
-The predictive β-diversity model also requires information on the average probability of each species occurring across all points.
+The predictive _Beta_-diversity model also requires information on the average probability of each species occurring across all points.
 
 ```{r p-hats}
 # fitted_126 <- fitted(birds1.rda.fin, model = "CCA")
@@ -338,7 +338,7 @@ p_hats_birds <- apply(bird_com, 2, mean)
 p_hats_birds
 ```
 
-The PCA axes, PNCM vectors, final RDA model and probability of species occurence are saved out to be applied in the subsequent apply model section.
+The PCA axes, PCNM vectors, final RDA model and probability of species occurrence are saved out to be applied in the subsequent apply model section.
 
 ```{r save beta model objs, eval = FALSE}
 save(pca_birds,
