--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-Make spatial predictions of biodiversity across urban landscapes. Refer to [package website](https://ecological-cities.github.io/biodivercity/) for demonstrations of how the package may be used.
+Make spatial predictions of biodiversity across city landscapes. Refer to [package website](https://ecological-cities.github.io/biodivercity/) for demonstrations of how the package may be used.
 
 <br>
 
@@ -35,10 +35,9 @@ Many frameworks to assess 'biodiversity' have been proposed in research and prac
 
 - Step-by-step protocols for random point sampling of an animal group within areas of interest
 - Generate data summaries of the animals surveyed, at multiple levels of granularity (e.g., areas, periods, animal groups, species)
-- Download and process landscape data within areas of interest (e.g., satellite imagery, OpenStreetMap data)
-- Convert vector data generated from future design scenarios into formats suitable for model predictions
-- Build and validate predictive models to assess local (_Alpha_), community (_Beta_) and total (_Gamma_) diversity for an animal group
-- Use models to make pixel-based spatial predictions across new areas and into the future
+- Download and process landscape data within areas of interest (e.g., remotely sensed data, OpenStreetMap data, manually mapped data)
+- Build predictive models to assess local (_Alpha_), community (_Beta_) and total (_Gamma_) diversity for an animal group
+- Use models to make pixel-based spatial predictions across new areas and time periods
 - Summarise predictions to benchmark and compare biodiversity 'performance' between planning units across the city
 
 <br>
@@ -75,7 +74,7 @@ devtools::load_all() # to knit manually w latest changes (not built/installed ye
 
 To cite `biodivercity` or acknowledge its use, please cite the following:
 
-*Tan, E. Y. W., Song, X. P., Sim, H. J., Nai, J., Chong, K. Y. (2022). biodivercity: An R package to assess the diversity of animal species in urban areas. R package version 0.0.1 (unreleased). https://github.com/ecological-cities/biodivercity.*  
+*Song, X. P., Tan, E. Y. W., Lee, S. K. R., Sim, H. J., Nai, J., Chong, K. Y. (2022). biodivercity: An R package for spatial assessment of biodiversity across city landscapes. R Package version 0.1.0. https://github.com/ecological-cities/biodivercity.*  
 
 To get a BibTex entry, run `citation("biodivercity")`.
 
