--- a/vignettes/biodivercity.Rmd
+++ b/vignettes/biodivercity.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Get started with biodivercity"
-author: "Song, Xiao Ping"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -24,11 +23,11 @@ Many frameworks to assess 'biodiversity' have been proposed in research and prac
 
 - Step-by-step protocols for random point sampling of an animal group within areas of interest
 - Generate data summaries of the animals surveyed, at multiple levels of granularity (e.g., areas, periods, animal groups, species)
-- Download and process landscape data within areas of interest (e.g., satellite imagery, OpenStreetMap data)
-- Convert vector data generated from future design scenarios into formats suitable for model predictions
-- Build and validate predictive models to assess _Alpha_ (local), _Beta_ (community) and _Gamma_ (total) diversity for an animal group
-- Use models to make pixel-based spatial predictions across new areas and into the future
+- Download and process landscape data within areas of interest (e.g., remotely sensed data, OpenStreetMap data, manually mapped data)
+- Build predictive models to assess local (_Alpha_), community (_Beta_) and total (_Gamma_) diversity for an animal group
+- Use models to make pixel-based spatial predictions across new areas and time periods
 - Summarise predictions to benchmark and compare biodiversity 'performance' between planning units across the city
+
 
 <br>
 
